fix: layout overflow (#42)

--- a/src/default-theme/components/Article.module.css
+++ b/src/default-theme/components/Article.module.css
@@ -17,7 +17,21 @@
 	right: 0;
 	transition: transform 0.3s ease-in-out;
 	overflow-y: auto;
+	overflow-x: clip;
 	margin-left: 2rem;
+	scrollbar-width: thin;
+
+	--mix-color: black;
+	scrollbar-color: color-mix(
+			in hsl,
+			var(--sb-background-color) 50%,
+			var(--mix-color)
+		)
+		color-mix(in hsl, var(--sb-background-color) 95%, var(--mix-color));
+
+	html[data-theme="dark"] & {
+		--mix-color: white;
+	}
 }
 
 @media screen and (max-width: 1100px) {
