--- a/src/default-theme/index.css
+++ b/src/default-theme/index.css
@@ -5,6 +5,19 @@ html {
 	background: var(--sb-background-color);
 	font-optical-sizing: auto;
 	font-family: var(--sb-font-text);
+	overflow-x: hidden;
+
+	--mix-color: black;
+	scrollbar-color: color-mix(
+			in hsl,
+			var(--sb-background-color) 50%,
+			var(--mix-color)
+		)
+		color-mix(in hsl, var(--sb-background-color) 95%, var(--mix-color));
+
+	&[data-theme="dark"] {
+		--mix-color: white;
+	}
 }
 
 code {
